commit for  pull changes from dev

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,6 +1,6 @@
 
 
-.hero{margin-bottom:122px}
+.hero{margin-bottom:121px}
 
 .hero-title {
   font-family: Titan One;
@@ -83,7 +83,10 @@ background-repeat: no-repeat;
 
      .ice-cream-picture{background-image: url(../images/hero/hero-circle-big-tablet.png);
     display: block;
-background-repeat: no-repeat;}
+background-repeat: no-repeat;
+}
+
+
      .hero-paragraph{
          max-width: 114px;
          max-height: 48px;
@@ -94,7 +97,8 @@ color: var(--primary-light-color);
 }
 
 .milk-decanter-wrapper{display: flex;
-align-items: center;}
+align-items: center;
+}
    
 
 .hero-title{
@@ -111,9 +115,10 @@ height: 80px;
 font-weight: 400;
 font-size: 34px;
 line-height: 90.5%;
-
-
 }
+
+.girl-so-tasty{margin-left: 566px;
+display: block;}
 
 
 }
