--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,12 +1,18 @@
 .about-section {
   background-color: var(--primary-bcg-color);
-  background-image: url(../images/about/m-milk.png);
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-size: 100%;
   padding-top: 146px;
+  position: relative;
   @media screen and (min-width: 772px) {
     padding-top: 130px;
+  }
+}
+
+.about-picture-milk {
+  position: absolute;
+  bottom: 61px;
+  width: 100%;
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    display: none;
   }
 }
 
@@ -62,6 +68,7 @@
 
 .about-flextext {
   margin-left: 17px;
+  z-index: 999;
 }
 
 .about-text {
