--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,9 +1,10 @@
 .advantages-section {
   background-color: var(--primary-bcg-color);
-  padding-top: 38px;
-  padding-bottom: 145px;
+  padding-top: 39px;
+  padding-bottom: 124px;
   @media screen and (min-width: 772px) {
     padding-top: 66px;
+    padding-bottom: 246px;
   }
 }
 
@@ -36,7 +37,11 @@
 .advantages-list-item {
   @media screen and (min-width: 772px) {
     margin-top: 0;
-    margin-left: 60px;
+    margin-right: 60px;
+    width: calc((100% - 120px) / 3);
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
