--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,15 @@
 <section class="about-section">
+    <picture>
+        <source srcset="./images/about/d-milk.webp 1x, ./images/about/d-milk@2x.webp 2x" media="(min-width: 1200px)"
+            type="image/webp">
+        <source srcset="./images/about/d-milk.png 1x, ./images/about/d-milk@2x.png 2x" media="(min-width: 1200px)">
+    
+        <source srcset="./images/about/m-milk.webp 1x, ./images/about/m-milk@2x.webp 2x" media="(max-width: 480px)"
+            type="image/webp">
+        <source srcset="./images/about/m-milk.png 1x, ./images/about/m-milk@2x.png 2x" media="(max-width: 480px)">
+    
+        <img class="about-picture-milk" src="./images/about/m-milk.png" alt="Фото молока">
+    </picture>
     <div class="container">
         <label class="about-label" for="#">Tradition and love</label>
         <h2 class="about-title">How it's made</h2>
@@ -10,12 +21,12 @@
                     media="(min-width: 1200px)">
             
                 <source srcset="./images/about/p-cow.webp 1x, ./images/about/p-cow@2x.webp 2x"
-                    media="(min-width: 768px)" type="image/webp">
-                <source srcset="./images/about/p-cow.png 1x, ./images/about/p-cow@2x.png 2x" media="(min-width: 768px)">
+                    media="(min-width: 772px)" type="image/webp">
+                <source srcset="./images/about/p-cow.png 1x, ./images/about/p-cow@2x.png 2x" media="(min-width: 772px)">
             
                 <source srcset="./images/about/m-cow.webp 1x, ./images/about/m-cow@2x.webp 2x"
-                    media="(max-width: 767px)" type="image/webp">
-                <source srcset="./images/about/m-cow.png 1x, ./images/about/m-cow@2x.png 2x" media="(max-width: 767px)">
+                    media="(max-width: 771px)" type="image/webp">
+                <source srcset="./images/about/m-cow.png 1x, ./images/about/m-cow@2x.png 2x" media="(max-width: 771px)">
             
                 <img class="about-picture-cow" src="./images/about/m-cow.png" alt="Фото коровы">
             </picture>
