--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,33 +1,37 @@
 .contacts-section {
   background-color: #fff5f6;
-  padding-top: 86px;
   padding-bottom: 113px;
   @media screen and(min-width:768px) {
-    padding-top: 119px;
     padding-bottom: 165px;
   }
-  @media screen and(min-width:768px) {
-    padding-top: 132px;
-  }
+}
+.contacts-section .container {
+  margin-top: 170px;
 }
 .contacts-list {
+  margin-top: -84px;
   @media screen and(min-width:768px) {
     display: flex;
-    margin: -8px;
+    margin: -10px;
+    margin-top: 197px;
   }
   @media screen and(min-width:1280px) {
     margin: -15px;
+    margin-top: 234px;
   }
 }
 .contacts-itme {
+  // margin-top: -84px;
   background: #ffffff;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   padding: 43px 20px;
+
   @media screen and(min-width:768px) {
     width: calc((100% - 3 * 16px) / 3);
-    margin: 8px;
-    padding: 50px 32px 50px 32px;
+    margin: 10px;
+    margin-top: -78px;
+    padding: 50px 30px 50px 30px;
   }
   @media screen and(min-width:1280px) {
     padding-bottom: 62px;
@@ -36,6 +40,7 @@
     padding-right: 45px;
     width: calc((100% - 3 * 30px) / 3);
     margin: 15px;
+    margin-top: -102px;
   }
   //outline: 1px solid red;
   &:not(:last-child) {
@@ -146,7 +151,7 @@
   /* identical to box height, or 186% */
   color: #ffa5ba;
   @media screen and(min-width:768px) {
-    @include font(14px, 500, 26px);
+    @include font(14px, 500, 24px);
   }
   @media screen and(min-width:768px) {
     @include font(16px, 500, 30px);
@@ -198,6 +203,7 @@
     background-color: #d41443;
     color: #ffffff;
     cursor: pointer;
+    transform: scale(1.1);
   }
 }
 .btn:hover .location-icon,
