--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -58,17 +58,10 @@
         </p>
         <button type="button" class="about-button" data-modal-open>
           Read more
+          <svg class="about-arrow" width="7" height="10">
+            <use href="./images/sprite.svg#icon-arrow-btn"></use>
+          </svg>
         </button>
-
-        <!-- <div class="about-backdrop is-hidden" data-modal>
-          <div class="about-modal">
-            <button class="about-close" type="button" data-modal-close>
-              <svg class="close-icon" width="11" height="11">
-                <use href="./images/sprite.svg#icon-close"></use>
-              </svg>
-            </button>
-          </div>
-        </div>-->
       </div>
     </div>
   </div>
