--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,6 +1,7 @@
 .about {
   background-color: $bg-secondary-color;
   padding-top: 125px;
+  padding-bottom: 40px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -11,9 +12,9 @@
 }
 
 @media screen and (min-device-pixel-ratio: 2),
-screen and (-webkit-min-device-pixel-ratio: 2),
-screen and (min-resolution: 192dpi),
-screen and (min-resolution: 2dppx) {
+  screen and (-webkit-min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
   .about {
     background-image: url(../images/mob-about-fon@2x.png);
   }
@@ -51,10 +52,6 @@ screen and (min-resolution: 2dppx) {
   margin-bottom: 26px;
 }
 
-.about-img {
-  margin-bottom: 46px;
-}
-
 .about-right-side {
   padding: 0 30px;
 }
@@ -83,34 +80,11 @@ screen and (min-resolution: 2dppx) {
   margin-bottom: 15px;
 }
 
-.about-button {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.28;
-  color: #d41443;
-  background-color: #ffffff;
-  font-family: inherit;
-  margin-top: 17px;
-  text-align: center;
-  border: transparent;
-  border-radius: 22px;
-  padding-right: 30px;
-  min-width: 176px;
-  min-height: 44px;
-  padding: 0 7px;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.about-button:hover,
-.button:focus {
-  cursor: pointer;
-}
-
 @media screen and (min-width: 768px) {
   .about {
     background-image: none;
     padding-top: 130px;
+    padding-bottom: 65px;
   }
 
   .about-label-title {
@@ -157,7 +131,7 @@ screen and (min-resolution: 2dppx) {
       margin-top: 0;
     }
   }
-  
+}
 @media screen and (min-width: 1280px) {
   .about {
     background-image: url(../images/desk-about-fon.png);
@@ -212,4 +186,3 @@ screen and (min-resolution: 2dppx) {
     background-image: url(../images/desk-about-fon@2x.png);
   }
 }
-
