--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,6 +1,9 @@
 
 
-.hero{margin-bottom:122px}
+.hero {
+  margin-bottom:122px;
+  background-color: var(--colorful-bg-color-one);
+  }
 
 .hero-title {
   font-family: Titan One;
