--- a/src/sass/layout/_locations.scss
+++ b/src/sass/layout/_locations.scss
@@ -1,6 +1,7 @@
 .locations {
         padding-top: 86px;
         padding-bottom: 113px;
+        background-color: var(--second-bgc);
 
     @media screen and (min-width: 768px) {
         padding-top: 119px;
@@ -122,32 +123,47 @@
      }
 
      .locations__buttons {
+        // height: 44px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-align: center;
      }
 
      .button--secondary {
-         width: 160px;
-         height: 40px;
+         min-width: 160px;
+         height: 44px;
          border-radius: 22px;
          border: none;
          margin-bottom: 10px;
+
+         transition: background-color $time-main $timing-function-main;
      }
 
      .button--icon {
-        width: 160px;
-        height: 40px;
+        min-width: 160px;
+        height: 44px;
         border-radius: 22px;
         border: none;
         color: var(--accent-primary-color);
-        background: var(--light-text-color);
+        background-color: var(--light-text-color);
+
+        transition: background-color $time-main $timing-function-main;
+    }
+
+    .button--icon:hover,
+    .button--icon:focus {
+        background-color: var(--light-hover-color);
     }
 
      .button__icon-right {
          width: 7px;
          height: 10px;
-         margin-left: 10px;
+         margin-left: 5px;
+     }
+
+     .button--secondary .button__icon-right {
+         fill: white;
      }
 
 
@@ -220,6 +236,8 @@
 
     .button--secondary {
         width: 190px;
+        margin-right: 15px;
+        margin-bottom: 0;
     }
 
     .button--icon {
@@ -228,6 +246,13 @@
 }
 
 @media screen and (min-width: $desktop) {
+    // .locations {
+    //     background-image: url('../images/8-locations/sectionbg21.png');
+    //     background-repeat: no-repeat;
+    //     background-size: contain;
+    // }
+
+
     .locations__item {
         width: 330px;
         height: 572px;
