разметка модального окна

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -72,7 +72,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="backdrop is-hiden" data-modal>
+  <div class="backdrop is-hiden" data-modal>
     <div class="modal">
       <button type="button" class="modal-close" data-modal-close>
         <svg width="11" height="11" class="modal-window__icon">
@@ -80,5 +80,5 @@
         </svg>
       </button>
     </div>
-  </div> -->
+  </div>
 </section>
