добавил стили на таблетку

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,6 +1,5 @@
 .hero {
   width: 100%;
-  max-width: 767px;
   height: 502px;
   background-color: $accent-rose-color;
 
@@ -17,23 +16,58 @@
   background-repeat: no-repeat;
   background-position:top 31px right 137px;
   }
-
- 
+  
   &__container {
     padding: 0;
   }
   &__ice-cream {
-    position: absolute;
+    position: fixed;
     top: 92px;
     right: 32px;
     @media screen and(min-width:$tablet){
       top: 63px;
     right: 247px;
     }
+    @media screen and(min-width:$desktop){
+      top: 108px;
+    right: 451px;
+    }
+  }
+  
+  &__girl{
+    display: none;
+    @media screen and(min-width:$tablet){
+    display: block;
+    position: fixed;
+    right: 34px;
+    bottom: 8px;
+  }
+    @media screen and(min-width:$desktop){
+    display: block;
+    position: fixed;
+    right: 110px;
+    top: 433px;
+  }
+  }
+
+  &__milk{
+    display: none;
+     @media screen and(min-width:$tablet){
+    display: block;
+    position: fixed;
+    left: 34px;
+    bottom: 36px;
+  }
+    @media screen and(min-width:$desktop){
+    display: block;
+    position: fixed;
+    left: 76px;
+    bottom: 46px;
+  }
   }
 
   &__title {
-    position: absolute;
+    position: fixed;
     top: 193px;
     left: 20px;
     
@@ -46,7 +80,7 @@
     color: $white-color;
 
     @media screen and(min-width:$tablet){
-      position: absolute;
+      position: fixed;
     top: 102px;
     left: 34px;
     font-family: Titan One;
@@ -55,9 +89,9 @@
     line-height: 25px;
 
 
-color: #FFFFFF;
+    color: #FFFFFF;
     }
-  }
+   }
   &__title-passion {
     font-family: Titan One;
     font-weight: 400;
@@ -73,7 +107,7 @@ color: #FFFFFF;
     }
   }
   &__products-btn {
-    position: absolute;
+    position: fixed;
     top: 318px;
     left: 20px;
     font-weight: 400;
@@ -93,7 +127,7 @@ color: #FFFFFF;
     }
   }
   &__made-btn {
-    position: absolute;
+    position: fixed;
     top: 318px;
     left: 90px;
     font-weight: 400;
