--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,7 +14,30 @@
             
                 <img src="./images/png/hero/mobile/icecream.png" alt="">
             </picture>
+        </div>
+
+        <div class="hero__girl">
+            <picture>
+                <source srcset="./images/png/hero/descktop/girl.png 1x, ./images/png/hero/descktop/girl@2x.png 2x"
+                    media="(min-width:1200px)">
             
+                <source srcset="./images/png/hero/tablet/girl.png 1x, ./images/png/hero/tablet/girl@2x.png 2x"
+                    media="(min-width: 768px)">
+            
+                <img src="./images/png/hero/tablet/girl.png" alt="">
+            </picture>
+        </div>
+
+        <div class="hero__milk">
+            <picture>
+                <source srcset="./images/png/hero/descktop/milk.png 1x, ./images/png/hero/descktop/milk@2x.png 2x"
+                    media="(min-width:1200px)">
+            
+                <source srcset="./images/png/hero/tablet/milk.png 1x, ./images/png/hero/tablet/milk@2x.png 2x"
+                    media="(min-width: 768px)">
+            
+                <img src="./images/png/hero/tablet/milk.png" alt="">
+            </picture>
         </div>
         <h1 class="hero__title">ice cream <br>
              made with <br>
