--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,32 +1,32 @@
 <header class="header" id="header">
-  <div class="header-container">
+  <div class="container">
     <a href="./index.html" class="logotype">
       <picture>
         <source srcset="
-            ./images/header/desktop.webp    1x,
-            ./images/header/desktop@2x.webp 2x
-          " media="(min-width: 1200px)" />
+   ./images/header/desktop.webp 1x,
+   ./images/header/desktop@2x.webp 2x
+    " media="(min-width: 1280px)" />
         <source srcset="
-            ./images/header/tablet.webp    1x,
-            ./images/header/tablet@2x.webp 2x
-          " media="(min-width: 768px)" />
+   ./images/header/tablet.webp 1x,
+   ./images/header/tablet@2x.webp 2x
+    " media="(min-width: 768px)" />
         <source srcset="
-            ./images/header/mobile.webp    1x,
-            ./images/header/mobile@2x.webp 2x
-          " media="(min-width: 480px)" />
+   ./images/header/mobile.webp 1x,
+   ./images/header/mobile@2x.webp 2x
+    " media="(min-width: 480px)" />
 
         <source srcset="
-            ./images/header/desktop.png    1x,
-            ./images/header/desktop@2x.png 2x
-          " media="(min-width: 1200px)" type="image/png" />
+   ./images/header/desktop.png 1x,
+   ./images/header/desktop@2x.png 2x
+    " media="(min-width: 1280px)" type="image/png" />
         <source srcset="
-            ./images/header/tablet.png    1x,
-            ./images/header/tablet@2x.png 2x
-          " media="(min-width: 768px)" type="image/png" />
+   ./images/header/tablet.png 1x,
+   ./images/header/tablet@2x.png 2x
+    " media="(min-width: 768px)" type="image/png" />
         <source srcset="
-            ./images/header/mobile.png    1x,
-            ./images/header/mobile@2x.png 2x
-          " media="(min-width: 480px)" type="image/png" />
+   ./images/header/mobile.png 1x,
+   ./images/header/mobile@2x.png 2x
+    " media="(min-width: 480px)" type="image/png" />
 
         <img src="./images/header/mobile.png" alt="logotype" />
       </picture>
