--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -5,14 +5,20 @@
   @media screen and (min-width: 772px) {
     padding-top: 130px;
   }
+  @media screen and (min-width: 1280px) {
+    padding-top: 125px;
+  }
 }
 
 .about-picture-milk {
   position: absolute;
   bottom: 61px;
   width: 100%;
-  @media screen and (min-width: 480px) and (max-width: 1199px) {
+  @media screen and (min-width: 480px) and (max-width: 1279px) {
     display: none;
+  }
+  @media screen and (min-width: 1280px) {
+    top: 342px;
   }
 }
 
@@ -29,6 +35,10 @@
   @media screen and (min-width: 772px) {
     font-size: 26px;
     line-height: 30px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 30px;
+    line-height: 34px;
   }
 }
 
@@ -47,12 +57,17 @@
     line-height: 55px;
     margin-bottom: 50px;
   }
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 66px;
+    margin-bottom: 55px;
+  }
 }
 
 .about-for-flex {
+  background-color: var(--primary-bcg-color);
   @media screen and (min-width: 772px) {
     display: flex;
-    margin-bottom: 56px;
   }
 }
 
@@ -64,11 +79,19 @@
     margin-bottom: 0;
     min-width: 340px;
   }
+  @media screen and (min-width: 772px) {
+    margin-bottom: 0;
+    min-width: 516px;
+  }
 }
 
 .about-flextext {
-  margin-left: 17px;
-  z-index: 999;
+  @media screen and (min-width: 772px) {
+    margin-left: 17px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-left: 74px;
+  }
 }
 
 .about-text {
@@ -84,13 +107,28 @@
     font-size: 14px;
     line-height: 176%;
   }
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
+  }
   &.first {
     color: var(--primary-text-color);
     margin-bottom: 33px;
+    @media screen and (min-width: 772px) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 35px;
+    }
   }
   &.second {
     color: var(--secondary-text-color);
     margin-bottom: 17px;
+    @media screen and (min-width: 772px) {
+      margin-bottom: 62px;
+    }
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 45px;
+    }
   }
 }
 
