adds container in gallery

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,21 +1,58 @@
 <section class="gallery">
-  <div class="gallery-container">
+  <div class="container">
     <h2 class="visually-hidden">gallery</h2>
     <picture>
-    <source srcset="./images/gallery/pictures-desktop.webp 1x, ./images/gallery/pictures-desktop@2x.webp 2x" media="(min-width: 1200px)"
-      type="image/webp">
-    
-    <source srcset="./images/gallery/pictures-desktop.jpg 1x, ./images/gallery/pictures-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-    
-    <source srcset="./images/gallery/pictures-tablet.webp 1x, ./images/gallery/pictures-tablet@2x.webp 2x" media="(min-width: 768px)"
-      type="image/webp">
-    
-    <source srcset="./images/gallery/pictures-tablet.jpg 1x, ./images/gallery/pictures-tablet@2x.jpg 2x" media="(min-width: 768px)">
-    
-    <source srcset="./images/gallery/pictures-mobile.webp 1x, ./images/gallery/pictures-mobile@2x.webp 2x" type="image/webp">
-    
-    <img class="gallery-img" srcset="./images/gallery/pictures-mobile.jpg 1x, ./images/gallery/pictures-mobile@2x.jpg 2x"
-      src="./images/gallery/pictures-mobile.jpg" alt="Ice cream gallery">
-      </picture>
+      <source
+        srcset="
+          ./images/gallery/pictures-desktop.webp    1x,
+          ./images/gallery/pictures-desktop@2x.webp 2x
+        "
+        media="(min-width: 1200px)"
+        type="image/webp"
+      />
+
+      <source
+        srcset="
+          ./images/gallery/pictures-desktop.jpg    1x,
+          ./images/gallery/pictures-desktop@2x.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+
+      <source
+        srcset="
+          ./images/gallery/pictures-tablet.webp    1x,
+          ./images/gallery/pictures-tablet@2x.webp 2x
+        "
+        media="(min-width: 768px)"
+        type="image/webp"
+      />
+
+      <source
+        srcset="
+          ./images/gallery/pictures-tablet.jpg    1x,
+          ./images/gallery/pictures-tablet@2x.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+
+      <source
+        srcset="
+          ./images/gallery/pictures-mobile.webp    1x,
+          ./images/gallery/pictures-mobile@2x.webp 2x
+        "
+        type="image/webp"
+      />
+
+      <img
+        class="gallery-img"
+        srcset="
+          ./images/gallery/pictures-mobile.jpg    1x,
+          ./images/gallery/pictures-mobile@2x.jpg 2x
+        "
+        src="./images/gallery/pictures-mobile.jpg"
+        alt="Ice cream gallery"
+      />
+    </picture>
   </div>
 </section>
