--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,8 +1,13 @@
+.container {
+  background-color: #fff5f6;
+}
+
 .contacts-cards {
   flex-wrap: wrap;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
 
   padding: 43px 20px;
   width: 220px;
@@ -19,35 +24,54 @@
 
   margin-bottom: 25px;
   text-transform: uppercase;
+  font-weight: 500;
+  line-height: 1.5;
 
   background-color: #f0d1a5;
   color: var(--tittle-text-color);
   border-radius: 4px;
 }
+.food {
+  background-color: #c2e297;
+}
 
 .contacts-town {
   color: var(--black);
   margin-bottom: 10px;
+  font-weight: 500;
+  line-height: 1.5;
 }
 
 .contacts-about {
-  color: var(--grey);
+  display: block;
   margin-bottom: 25px;
+
+  font-weight: 500;
+  line-height: 1.5;
+  color: var(--grey);
 }
 
 .contacts-work-list {
-  padding-top: 25px;
+  padding-top: 15px;
   padding-bottom: 25px;
 
+  font-weight: 500;
+  line-height: 1.5;
   border-top: 1px solid #e1e1e1;
   border-bottom: 1px solid #e1e1e1;
 }
 
 .contacts-work-days {
   color: var(--black);
+  font-weight: 500;
+  line-height: 1.5;
+  margin-top: 10px;
 }
 
 .contacts-work-time {
+  display: block;
+  font-weight: 500;
+  line-height: 1.5;
   color: var(--pink);
 }
 
@@ -56,5 +80,39 @@
 }
 
 .contacts-item {
+  font-weight: 500;
+  line-height: 1.5;
   color: var(--grey);
+}
+
+.contact-button {
+  display: flex;
+  justify-content: center;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+
+  background: var(--white);
+  border-radius: 22px;
+  border: 1px solid var(--white);
+  min-width: 160px;
+  color: var(--dark-pink);
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.312;
+
+  &hover,
+  &fucus {
+    background-color: var(--dark-pink);
+    border: 1px solid var(--dark-pink);
+    color: var(--white);
+  }
+}
+
+.contacts-button-list {
+  margin-bottom: 10px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
